--- a/src/app/ammap/amcard/amcard.component.html
+++ b/src/app/ammap/amcard/amcard.component.html
@@ -1,5 +1,5 @@
 <nz-card [nzHoverable]="true" class="eam-map-amcard">
-  <p>资产编号</p>
-  <p>资产名称</p>
-  <p>所属单位</p>
+  <p>编号:{{data.AMCode}}</p>
+  <p>名称:{{data.AMName}}</p>
+  <p>单位:{{data.CompName}}</p>
 </nz-card>
