--- a/src/app/ammap/amcardlist/amcardlist.component.css
+++ b/src/app/ammap/amcardlist/amcardlist.component.css
@@ -1,9 +1,17 @@
 .loadmore {
-        text-align: center;
-        margin-top: 12px;
-        height: 32px;
-        line-height: 32px;
-      }
-.eam-map-amcardlist{
+    text-align: center;
+    margin-top: 12px;
+    height: 32px;
+    line-height: 32px;
+}
+
+.eam-map-amcardlist {
     width: 100%;
+}
+
+.eam-pagination {
+    text-align: center;
+    margin-top: 120px;
+    height: 32px;
+    line-height: 32px;
 }
