--- a/src/app/ammap/amcard/amcard.component.css
+++ b/src/app/ammap/amcard/amcard.component.css
@@ -1,5 +1,5 @@
-.eam-map-amcard{
-    width:100%;
-    background-color: #f5f5f6;
-    
+.eam-map-amcard {
+    width: 100%;
+    background-color: #fff;
+    border-color: #fff
 }
