--- a/src/app/ammap/amcardlist/amcardlist.component.css
+++ b/src/app/ammap/amcardlist/amcardlist.component.css
@@ -1,17 +1,8 @@
-.loadmore {
-    text-align: center;
-    margin-top: 12px;
-    height: 32px;
-    line-height: 32px;
-}
-
 .eam-map-amcardlist {
     width: 100%;
 }
 
 .eam-pagination {
     text-align: center;
-    margin-top: 120px;
-    height: 32px;
-    line-height: 32px;
+    margin-top: 10px !important;
 }
