--- a/src/app/ammap/mapmain/mapmain.component.css
+++ b/src/app/ammap/mapmain/mapmain.component.css
@@ -1,11 +1,21 @@
 .eam_map {
-        height: 800px;
-        width: 100%;
-        bottom: 0px
-    }
-.logo{
-    display: inline-block;
+    height: 840px;
+    width: 100%;
+    bottom: 0px
+}
+
+.logo {
+    float: left;
     font-weight: bold;
     font-size: 16px;
-    color: #aabdd0;
+    color: #0d1a26;
+}
+
+.eam_header li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.eam_header {
+    line-height: 64px;
 }
