--- a/src/app/ammap/amcard/amcard.component.html
+++ b/src/app/ammap/amcard/amcard.component.html
@@ -1,11 +1,11 @@
 <nz-card [nzHoverable]="true" [nzActions]="[actionSetting, actionEdit]" class="eam-map-amcard">
-    <p>编号:{{data.AMCode}}</p>
-    <p>名称:{{data.AMName}}</p>
-    <p>单位:{{data.CompName}}</p>
-    <p>单位:{{data.CompName}}</p>
+    <p>编号:{{data.amcode}}</p>
+    <p>名称:{{data.amname}}</p>
+    <p>单位:{{data.compname}}</p>
+    <p>数量:{{data.amqty}}</p>
 
     <ng-template #actionSetting>
-        <i nz-icon nzType="environment" nzTheme="outline"></i>
+        <i nz-icon nzType="environment" nzTheme="outline" (click)="onLocationClick($event)"></i>
     </ng-template>
     <ng-template #actionEdit>
         <i nz-icon nzType="file-text" nzTheme="outline"></i>
