--- a/src/app/ammap/amcardlist/amcardlist.component.html
+++ b/src/app/ammap/amcardlist/amcardlist.component.html
@@ -1,11 +1,11 @@
 <nz-list class="eam-map-amcardlist" [nzDataSource]="data" [nzItemLayout]="'vertical'" [nzLoading]="loading" [nzRenderItem]="item" [nzSplit]=false>
     <ng-template #item let-item>
         <nz-list-item style=" padding:4px 10px 4px 4px;background-color: #eceff1 ">
-            <eam-amcard [data]="item" style="width:100% "></eam-amcard>
+            <eam-amcard [data]="item" (itemClick)="onItemClick($event)" style="width:100% "></eam-amcard>
         </nz-list-item>
     </ng-template>
     <div class="eam-pagination ">
-        <nz-pagination nzSimple #pagination [nzPageIndex]="1 " [nzPageSize]="5 " [nzTotal]="pageTotal " (nzPageIndexChange)="onPageChange($event) ">
+        <nz-pagination nzSimple #pagination [nzPageIndex]="1" [nzPageSize]="5" [nzTotal]="pageTotal" (nzPageIndexChange)="onPageChange($event)">
         </nz-pagination>
     </div>
 </nz-list>
