--- a/src/app/ammap/mapmain/mapmain.component.html
+++ b/src/app/ammap/mapmain/mapmain.component.html
@@ -35,7 +35,7 @@
         <nz-layout style="background: #eceff1">
             <nz-sider [nzWidth]="300"
                 style="overflow: auto; position: fixed; left: 0 ;background-color:inherit;height: 840px">
-                <eam-amcardlist #eamcardlist (rowClick)="onRowClick($event)"></eam-amcardlist>
+                <eam-amcardlist #eamcardlist (rowClick)="onRowClick($event)" [loading]="loading"></eam-amcardlist>
             </nz-sider>
             <nz-content style="min-height:840px; padding: 4px 4px 4px 0;margin-left: 300px">
                 <baidu-map #eammap class="eam_map" [options]="opts">
