--- a/src/app/components/query-list/query-list.component.html
+++ b/src/app/components/query-list/query-list.component.html
@@ -17,7 +17,7 @@
                 <span class="indexBg">
                     <span>{{index+1}}</span>
                 </span>
-                <span class="name ellipsis">{{item.name}}</span>
+                <span class="name ellipsis">{{item.code}} {{item.name}}</span>
             </nz-list-item>
         </ng-template>
         <ng-template #pagination>
