--- a/src/app/components/query-list/query-list.component.less
+++ b/src/app/components/query-list/query-list.component.less
@@ -56,6 +56,11 @@
                 max-width: 230px;
                 vertical-align: -10px;
             }
+
+            .ellipsis {
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
 
         ::ng-deep .ant-list-pagination {
